--- a/Toml/toml.toml
+++ b/Toml/toml.toml
@@ -1,11 +1,11 @@
 [SDFSDF]
 [modules]
-Do_A_Thing = { git.asd = "git@github.com:sjorsdonkers/modocil.git", commit = "21a0e57", path = "examples/assets/Do_A_Thing.jai" }
-Do_Other_Thing = { git = "git@github.com:sjorsdonkers/modocil.git", path = "examples/assets/Do_Other_Thing" }
+Do_A_Thing = { git.asd = 'git@github.com:sjorsdonkers/modocil.git', commit = '21a0e57', path = 'examples/assets/Do_A_Thing.jai' }
+Do_Other_Thing = { git = 'git@github.com:sjorsdonkers/modocil.git', path = 'examples/assets/Do_Other_Thing' }
 
 # Mixed-type arrays are allowed
 numbers = [ 0, 0, 0, 1, 2, 5 ]
 contributors = [
-  "Foo Bar <foo@example.com>",
-  { name = "Baz Qux", email = "bazqux@example.com", url = "https://example.com/bazqux" }
+  'Foo Bar <foo@example.com>',
+  { name = 'Baz Qux', email = 'bazqux@example.com', url = 'https://example.com/bazqux' }
 ]
