--- a/Toml/toml.toml
+++ b/Toml/toml.toml
@@ -9,3 +9,20 @@ contributors = [
   'Foo Bar <foo@example.com>',
   { name = 'Baz Qux', email = 'bazqux@example.com', url = 'https://example.com/bazqux' }
 ]
+
+a.b = [
+  {b.c = 3, b.d = 7},
+  {b.c = 3, b.d = 7},
+]
+
+[[products]]
+name = 'Hammer'
+sku = 738594937
+
+[[products]]  # empty table within the array
+
+[[products]]
+name = 'Nail'
+sku = 284758393
+
+color = 'gray'
