--- a/Toml/toml.toml
+++ b/Toml/toml.toml
@@ -32,7 +32,7 @@ color = 'gray'
 ffff = [[4, 5, 6], [7, 8, 9]]
 
 '' = 'blank'
-2fruit . 'flavor' = {'banana' .ok = 'yes'}
+2fruit . 'flavor' = {'banana' .ok = true }
 
 int1 = +99
 int2 = 42
