--- a/Toml/toml.toml
+++ b/Toml/toml.toml
@@ -51,3 +51,29 @@ oct1 = 0o01234567
 oct2 = 0o755 # useful for Unix file permissions
 # binary with prefix `0b`
 bin1 = 0b11010110
+
+# fractional
+flt1 = +1.0
+flt2 = 3.1415
+flt3 = -0.01
+# exponent
+flt4 = 5e+22
+flt5 = 1e06
+flt6 = -2E-2
+# both
+flt7 = 6.626e-34
+# INVALID FLOATS
+invalid_float_1 = .7
+invalid_float_2 = 7.
+invalid_float_3 = 3.e+20
+flt8 = 224_617.445_991_228
+# infinity
+sf1 = inf  # positive infinity
+sf2 = +inf # positive infinity
+sf3 = -inf # negative infinity
+# not a number
+sf4 = nan  # actual sNaN/qNaN encoding is implementation-specific
+sf5 = +nan # same as `nan`
+sf6 = -nan # valid, actual encoding is implementation-specific
+zero1 = -0.0
+zero2 = +0.0
