--- a/Toml/toml.toml
+++ b/Toml/toml.toml
@@ -77,3 +77,18 @@ sf5 = +nan # same as `nan`
 sf6 = -nan # valid, actual encoding is implementation-specific
 zero1 = -0.0
 zero2 = +0.0
+
+[[fruits]]
+name = 'apple'
+[fruits.physical]  # subtable
+color = 'red'
+shape = 'round'
+[[fruits.varieties]]  # nested array of tables
+name = 'red delicious'
+[[fruits.varieties]]
+name = 'granny smith'
+
+[[fruits]]
+name = 'banana'
+[[fruits.varieties]]
+name = 'plantain'
