--- a/Toml/toml.toml
+++ b/Toml/toml.toml
@@ -92,3 +92,19 @@ name = 'granny smith'
 name = 'banana'
 [[fruits.varieties]]
 name = 'plantain'
+[fruits.varieties.phys]  # subtable of nested array
+color = 'red'
+shape = 'round'
+
+
+[mllstrings]
+regex2 = '''I [dw]on't need \d{2} apples'''
+lines  = '''
+The first newline is
+trimmed in raw strings.
+   All other whitespace
+   is preserved.
+'''
+quot15 = '''Here are fifteen quotation marks: """""""""""""""'''
+# 'That,' she said, 'is still pointless.'
+str = ''''That,' she said, ''is still pointless.'''''
